# bevy-explorer

./: .gitignore  .gitmodules  Cargo copy.toml  Cargo.toml  Dockerfile  HEADLESS_PLAN.md  HEADLESS_SECURITY_ISOLATION.md  HEADLESS_TOWEROFMADNESS_TEST.md  build.rs  config.json  justfile  out.ansi  out.txt  package.json  readme.md  schedule.dot  shell.nix  supervisord.conf  tree.txt
.cargo/: config.toml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/av/: Cargo.toml
crates/av/src/: audio_context.rs  audio_loader.rs  audio_sink.rs  audio_source.rs  audio_source_native.rs  audio_source_wasm.rs  av_player_debug.rs  ffmpeg_util.rs  html_audio_source.rs  html_video_player.rs  lib.rs  microphone.rs  stream_processor.rs  test.rs  video_context.rs  video_player.rs  video_stream.rs  video_thread.rs
crates/avatar/: Cargo.toml  cargo.toml
crates/avatar/src/: animate.rs  attach.rs  avatar_texture.rs  base_wearables.rs  colliders.rs  dynamic_nametag.rs  foot_ik.rs  foreign_dynamics.rs  head_ik.rs  lib.rs  mask_material.rs  material_cache.rs  name_color.rs  npc_dynamics.rs  point_at_ik.rs  point_at_marker.rs  two_bone_ik.rs
crates/cef_offscreen/: Cargo.toml  LICENSE-MIT
crates/cef_offscreen/src/: components.rs  cursor_icon.rs  ipc.rs  keyboard.rs  lib.rs  localhost.rs  message_loop.rs  webview.rs
crates/cef_offscreen/src/core/: browser_process.rs  debug.rs  mod.rs  render_process.rs  util.rs
crates/cef_offscreen/src/ipc/: host_emit.rs  js_emit.rs
crates/cef_offscreen/src/localhost/: asset_loader.rs  responser.rs
crates/collectibles/: Cargo.toml
crates/collectibles/src/: base_wearables.rs  emotes.rs  lib.rs  urn.rs  wearables.rs
crates/common/: Cargo.toml
crates/common/src/: asset_cache.rs  day_color_luts.rs  dynamics.rs  godot_sky.rs  inputs.rs  lib.rs  profile.rs  rpc.rs  sets.rs  sky_params.rs  structs.rs  util.rs
crates/common/src/rpc/: mod.rs  result_sender.rs  stream_sender.rs
crates/comms/: Cargo.toml  cargo.toml  livekit_web_bindings.js
crates/comms/src/: archipelago.rs  broadcast_position.rs  global_crdt.rs  lib.rs  livekit_native.rs  livekit_room.rs  livekit_web.rs  movement_compressed.rs  preview.rs  profile.rs  signed_login.rs  test.rs  transport_debug.rs  wallet.rs  websocket_room.rs
crates/comms/src/livekit/: kira_bridge.rs  livekit_bridge.rs  livekit_video_bridge.rs  mic.rs  mod.rs  native.rs  participant.rs  plugin.rs  room.rs  room_debug.rs  runtime.rs  track.rs  web.rs
crates/comms/src/profile/: mod.rs  name_color.rs
crates/comms/src/pulse/: framing.rs  mod.rs  native.rs  plugin.rs  test.rs  transport.rs  wasm.rs
crates/dcl/: Cargo.toml  cargo.toml
crates/dcl/src/: lib.rs
crates/dcl/src/crdt/: growonly.rs  lww.rs  mod.rs
crates/dcl/src/interface/: crdt_context.rs  mod.rs
crates/dcl/src/js/: EngineApi.js  adaption_layer_helper.rs  comms.rs  engine.rs  ethereum_controller.rs  events.rs  fetch.rs  inspector.rs  local_storage.rs  mod.rs  player.rs  portables.rs  restricted_actions.rs  runtime.rs  runtime_gil.rs  system_api.rs  testing.rs  user_identity.rs  websocket.rs
crates/dcl_component/: Cargo.toml  build.rs  build_quant.rs  build_schema.rs  build_schema_overlay.rs
crates/dcl_component/src/: component_name_registry.rs  crdt_type.rs  lib.rs  proto  proto_components.rs  reader.rs  readme..md  transform_and_parent.rs  writer.rs
crates/dcl_component/src/component_schema/: mod.rs
crates/dcl_deno/: Cargo.toml
crates/dcl_deno/src/: lib.rs
crates/dcl_deno/src/js/: inspector.rs  local_storage.rs  mod.rs  websocket.rs
crates/dcl_deno_ipc/: Cargo.toml
crates/dcl_deno_ipc/src/: lib.rs  main.rs
crates/dcl_wasm/: Cargo.toml
crates/dcl_wasm/src/: lib.rs
crates/dcl_wasm/src/inner/: gotham_state.rs  local_storage.rs  mod.rs
crates/emotes/: Cargo.toml
crates/emotes/src/: lib.rs
crates/image_processing/: Cargo.toml
crates/image_processing/src/: engine.rs  lib.rs
crates/image_processing/src/processor/: mod.rs  native_fs.rs  wasm_fs.rs
crates/imposters/: Cargo.toml
crates/imposters/src/: bake_scene.rs  floor_imposter.rs  imposter_mesh.rs  imposter_spec.rs  lib.rs  render.rs
crates/input_manager/: Cargo.toml  cargo.toml
crates/input_manager/src/: lib.rs
crates/ipfs/: Cargo.toml  cargo.toml
crates/ipfs/src/: ipfs_debug.rs  ipfs_path.rs  lib.rs  scene_pack.rs
crates/ipfs/src/scene_pack/: harden.rs  stream.rs  testkit.rs
crates/nft/: Cargo.toml
crates/nft/src/: asset_source.rs  extended_image_loader.rs  lib.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  native.rs  wasm.rs  web_save.js
crates/restricted_actions/: Cargo.toml
crates/restricted_actions/src/: agent_commands.rs  lib.rs  teleport.rs
crates/scene_inspector/: Cargo.toml
crates/scene_inspector/src/: active_scene.rs  asset_commands.rs  lib.rs  manual_registry.rs  message_bus.rs  read_commands.rs  snapshot.rs  write_commands.rs
crates/scene_runner/: Cargo.toml  cargo.toml
crates/scene_runner/src/: bounds_calc.rs  gltf_mesh_resolver.rs  gltf_resolver.rs  imposters.rs  initialize_scene.rs  lib.rs  loading_system_scene_screen.rs  permission_manager.rs  permissions.rs  primary_entities.rs  renderer_context.rs  util.rs
crates/social/: Cargo.toml
crates/social/src/: client.rs  fake_client.rs  lib.rs  rpc_websocket.rs  runtime.rs
crates/system_api_types/: Cargo.toml
crates/system_api_types/src/: lib.rs
crates/system_bridge/: Cargo.toml
crates/system_bridge/src/: agent_commands.rs  lib.rs
crates/system_ui/: Cargo.toml  cargo.toml
crates/system_ui/src/: change_realm.rs  chat.rs  crash_report.rs  discover.rs  emote.rs  emote_select.rs  emotes.rs  foreign_profile.rs  friends.rs  lib.rs  login.rs  map.rs  mic.rs  oow.rs  oow_backdrop.rs  permission_manager.rs  permissions.rs  profile.rs  profile2.rs  profile_detail.rs  sysinfo.rs  toasts.rs  tooltip.rs  version_check.rs  wearables.rs
crates/texture_camera/: Cargo.toml
crates/texture_camera/src/: lib.rs
crates/tween/: Cargo.toml
crates/tween/src/: lib.rs  tween_debug.rs
(+917 files in other folders)
