[package]
name = "decentra-bevy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib/web.rs"
name = "webgpu_build"

# to build wasm lib:
# - copy ./assets to deploy/web/assets
# - copy ./crates/dcl/src/js/modules to deploy/web/modules
# - rustup default nightly # (tested with 2025-06-03)
# - wasm-pack build --target web --out-dir ./deploy/web/pkg --no-default-features --features="wasm" && npx serve deploy/web

[features]
default = ["livekit", "ffmpeg", "inspect", "social"]
# default = ["wasm"]
console = []
dcl-assert = ["common/dcl-assert"]
gen-tests = []
tracy = ["bevy/trace_tracy"]
inspect = ["dcl_deno/inspect", "system_ui/inspect"]
hot_reload = ["bevy/file_watcher", "ipfs/hot_reload"]
livekit = ["comms/livekit"]
ffmpeg = ["av/ffmpeg"]
social = ["dcl_component/social", "social/social"]
# wasm =   ["uuid/js", "bevy/webgpu"]
wasm =   ["uuid/js"]

[profile.release]
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
analytics = { path="crates/analytics" }
common = { path="crates/common" }
avatar = { path="crates/avatar" }
comms = { path="crates/comms" }
input_manager = { path="crates/input_manager" }
ipfs = { path="crates/ipfs" }
system_ui = { path="crates/system_ui" }
user_input = { path="crates/user_input" }
visuals = { path="crates/visuals" }
ui_core = { path="crates/ui_core" }
scene_material = { path="crates/scene_material" }
scene_runner = { path="crates/scene_runner" }
console = { path="crates/console" }
av = { path="crates/av" }
dcl = { path="crates/dcl" }
dcl_deno = { path="crates/dcl_deno" }
dcl_wasm = { path="crates/dcl_wasm" }
dcl_component = { path="crates/dcl_component" }
restricted_actions = { path="crates/restricted_actions" }
wallet = { path="crates/wallet" }
nft = { path="crates/nft" }
tween = { path="crates/tween" }
world_ui = { path="crates/world_ui" }
collectibles = { path="crates/collectibles" }
social = { path="crates/social" }
imposters = { path="crates/imposters" }
system_bridge = { path="crates/system_bridge" }
texture_camera = { path="crates/texture_camera" }
propagate = { path="crates/propagate" }
platform = { path="crates/platform" }

bevy = { version = "0.14", default-features = false, features=[
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "jpeg",
    "serialize",
] }
wgpu = "0.20"
bevy_console = { git = "https://github.com/robtfm/bevy-console", branch="bevy-0.14" }
# bevy_console = { path = "../bevy-console" }
bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }

serde = "1.0.152"
serde_json = { version = "1.0.92", features = ["raw_value"] }

itertools = "0.12"
tokio = { version = "1.44", features = ["sync"] }
anyhow = "1.0.70"
http = "1.1"
urn = "0.7.0"
ethers-signers = "2.0.3"
ethers-core = "2.0.3"
futures-lite = "1.12.0"
bimap = "0.6.3"
prost = "0.11.8"
clap = "4.1.10"
once_cell = "1.16.0"
rapier3d-f64 = "0.25"
urlencoding = "2.1.2"
async-std = "1.12.0"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "blocking"] }
kira = "0.8.4"
data-encoding = "2.5"
opener = { version = "0.8", git = "https://github.com/robtfm/opener" }
chrono = { version = "0.4.31", features = ["serde"] }
bevy_dui = { git = "https://github.com/robtfm/bevy_dui", branch = "main-14" }
bevy_ecss = { git = "https://github.com/robtfm/bevy_ecss", branch = "v0.14" }
bevy_kira_audio = { git = "https://github.com/robtfm/bevy_kira_audio", branch = "0.14-dcl", features=["flac", "mp3", "ogg", "wav"] }
bevy_simple_text_input = { git = "https://github.com/robtfm/bevy_simple_text_input", features=["clipboard"], branch="multiline" }
directories = "5"
uuid = { version = "1.7", features = ["v4"] }
build-time = "0.1.3"
async-tungstenite = { version = "0.25", features = ["async-native-tls"] }
tungstenite = { version = "0.21.0" }
dcl-rpc = { version = "2.3.5", default-features = false, features=["client", "websockets", "codegen", "server", "tungstenite"] }
async-trait = "0.1.68"
fastrand = "2"
rand = "0.8.5"
futures-util = "0.3.28"
async-native-tls = { version = "0.5", features = ["runtime-async-std"] }
boimp = { git = "https://github.com/robtfm/boimp", branch = "0.1.1" }
crc = "3"
num-traits = "0.2"
async-compat = "0.2"
async-fs = "2.0"
base64 = "0.22"
multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }
strum = "0.27"
strum_macros = "0.27"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.50"
web-time = "1.1"

[dependencies]
analytics = { workspace = true }
common = { workspace = true }
avatar = { workspace = true }
comms = { workspace = true }
input_manager = { workspace = true }
ipfs = { workspace = true }
system_ui = { workspace = true }
user_input = { workspace = true }
visuals = { workspace = true }
ui_core = { workspace = true }
scene_runner = { workspace = true }
console = { workspace = true }
av = { workspace = true }
restricted_actions = { workspace = true }
wallet = { workspace = true }
dcl = { workspace = true }
nft = { workspace = true }
tween = { workspace = true }
scene_material = { workspace = true }
world_ui = { workspace = true }
collectibles = { workspace = true }
social = { workspace = true }
imposters = { workspace = true }
system_bridge = { workspace = true }
texture_camera = { workspace = true }
propagate = { workspace = true }
platform = { workspace = true }

bevy = { workspace = true }
wgpu = { workspace = true }
bevy_console = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
build-time = { workspace = true }
web-time = { workspace = true }

pico-args = "0.5.0"
chrono = { workspace = true }
tracing-appender = "0.2.3"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

# non-main dependencies
futures-lite = { workspace = true }
dcl_component = { workspace = true }
tokio = { workspace = true }
bevy_simple_text_input = { workspace = true }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dcl_deno = { workspace = true }
mimalloc = { version = "*", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dcl_wasm = { workspace = true }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
log = "0.4"
wasm-bindgen = { workspace = true }

[build-dependencies]
prost-build = "0.11.8"

[patch.crates-io]
bevy = { git = "https://github.com/robtfm/bevy", branch = "release-0.14-dcl-cosmic-noimage" }
# bevy = { path="../bevy" }
dcl-rpc = { git = "https://github.com/decentraland/rpc-rust", branch = "chore/bump-tokio-tungstenite" }
ffmpeg-next = { git = "https://github.com/robtfm/rust-ffmpeg", branch = "audio-linesize-0-6.1" }
parry3d-f64 = { git = "https://github.com/robtfm/parry", branch = "bugfix-project-local-point" }
# rapier3d-f64 = { git = "https://github.com/robtfm/rapier", branch = "master" }
deno_core = { git = "https://github.com/robtfm/deno_core", branch = "0_307_hotfix" }
serde_v8 = { git = "https://github.com/robtfm/deno_core", branch = "0_307_hotfix" }
deno_ops = { git = "https://github.com/robtfm/deno_core", branch = "0_307_hotfix" }
winit = { git = "https://github.com/robtfm/winit", branch = "wnidows-cursor-lock" }

deno_console = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_fetch = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_net = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_url = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_webidl = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_web = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_websocket = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }
deno_webstorage = { git = "https://github.com/robtfm/deno", branch = "1_46_hotfix" }

# [patch."https://github.com/robtfm/bevy"]
# bevy = { path = "../bevy" }

# [patch."https://github.com/robtfm/bevy_dui"]
# bevy_dui = { path = "../bevy_dui" }

# [patch."https://github.com/robtfm/bevy_simple_text_input"]
# bevy_simple_text_input = { path = "../bevy_simple_text_input" }

# [patch."https://github.com/robtfm/boimp"]
# boimp = { path = "../boimp" }

# [patch."https://github.com/robtfm/bevy_atmosphere"]
# bevy_atmosphere = { path = "../bevy_atmosphere" }
