[package]
name = "av"
version = "0.1.0"
edition = "2021"

[lib]

[features]
ffmpeg = ["dep:ffmpeg-next"]
html = ["dep:web-sys", "dep:wasm-bindgen"]

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
scene_runner = { workspace = true }
comms = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
futures-lite = { workspace = true }
bevy_kira_audio = { workspace = true }
kira = { workspace = true }
wgpu = { workspace = true }

ffmpeg-next = { version = "6.0.0", optional = true }
thiserror = "1.0"

web-sys = { workspace = true, features = ["HtmlMediaElement", "HtmlVideoElement"], optional = true}
wasm-bindgen = { workspace = true, optional = true}
