[package]
name = "avatar"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
comms = { workspace = true }
console = { workspace = true}
dcl = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
scene_runner = { workspace = true }
ui_core = { workspace = true }
wallet = { workspace = true }

bevy = { workspace = true }
bevy_mod_billboard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urn = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bevy_console = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
