[package]
name = "avatar"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
common = { workspace = true }
comms = { workspace = true }
console = { workspace = true}
dcl = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
scene_runner = { workspace = true }
ui_core = { workspace = true }
wallet = { workspace = true }
input_manager = { workspace = true }
world_ui = { workspace = true }
collectibles = { workspace = true }
scene_material = { workspace = true }
social = { workspace = true }
propagate = { workspace = true }

bevy = { workspace = true }
bevy_kira_audio = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urn = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bevy_console = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
rapier3d-f64 = { workspace = true }
bevy_dui = { workspace = true }
isahc = { workspace = true }
