[package]
name = "cef_offscreen"
version = "0.1.0"
# 2024: the crate uses let-chains
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CEF offscreen-rendered webview for bevy: OSR into Images, cef:// asset scheme, js/host IPC. Derived from not-elm/bevy_cef."

[dependencies]
bevy = { workspace = true }
cef = { workspace = true }
cef-dll-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-channel = "2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
libc = { workspace = true }
