[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]

[features]
dcl-assert = []

[dependencies]
platform = { workspace = true }
dcl_component = { workspace = true }

bevy = { workspace = true }
anyhow = { workspace = true }
ethers-core = { workspace = true }
futures-lite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
async-compat = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bevy_kira_audio = { workspace = true }

hex = "0.4.3"
smallvec = "1.11"
bincode = "1.3"
tokio-util = "*"
pin-project = "1"