[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[lib]

[features]
livekit = ["dep:livekit"]

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }

bevy = { workspace = true }
bimap = { workspace = true }
ethers-signers = { workspace = true }
ethers-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-lite = { workspace = true }
isahc = { workspace = true }
prost = { workspace = true }
async-std = { workspace = true }
bevy_kira_audio = { workspace = true }
kira = { workspace = true }
async-trait = { workspace = true }
async-tungstenite = { workspace = true }
futures-util = { workspace = true }
async-tls = { workspace = true }
rand = { workspace = true }

livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="0.6-h264-false-2", features=["rustls-tls-webpki-roots"], optional = true }
multihash-codetable = { version = "0.1.1", features = ["digest", "sha2"] }
cid = "0.11.0"
multipart = { version = "0.18.0", default-features = false, features = ["client", "lazy_static"] }
image = "0.25"
