[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[lib]

[features]
livekit = ["dep:livekit"]

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }
propagate = { workspace = true }
platform = { workspace = true }

bevy = { workspace = true }
bimap = { workspace = true }
ethers-signers = { workspace = true }
ethers-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-lite = { workspace = true }
reqwest = { workspace = true }
prost = { workspace = true }
async-std = { workspace = true }
bevy_kira_audio = { workspace = true }
kira = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }
http = { workspace = true }
async-compat = { workspace = true }
multihash-codetable = { workspace = true }
web-time = { workspace = true }

modular-bitfield = "0.11"

livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="0.6-h264-false-2", features=["native-tls"], optional = true }
cid = "0.11.0"
multipart = { version = "0.18.0", default-features = false, features = ["client", "lazy_static"] }
image = "0.25"
