[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[lib]

[features]
livekit = [
    "dep:livekit",
    "dep:livekit-api",
    "dep:livekit-protocol",
    "dep:livekit-runtime",
    "dep:libwebrtc",
    "dep:webrtc-sys",
    "dep:webrtc-sys-build",
]

[dependencies]
common = { workspace = true }
dcl = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }
platform = { workspace = true }
system_bridge = { workspace = true }

bevy = { workspace = true }
bimap = { workspace = true }
ethers-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-lite = { workspace = true }
reqwest = { workspace = true }
prost = { workspace = true }
async-std = { workspace = true }
kira = { workspace = true }
futures-util = { workspace = true }
num-traits = { workspace = true }
http = { workspace = true }
multihash-codetable = { workspace = true }
web-time = { workspace = true }

modular-bitfield = "0.11"

cid = "0.11.0"
multipart = { version = "0.18.0", default-features = false, features = [
    "client",
    "lazy_static",
] }
image = "0.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
livekit = { version = "=0.5.3", features = [
    "tokio",
    "native-tls",
], optional = true }
livekit-api = { version = "=0.4.0", features = [
    "services-tokio",
], optional = true }
livekit-protocol = { version = "=0.3.5", optional = true }
livekit-runtime = { version = "=0.3.0", optional = true }
libwebrtc = { version = "=0.3.7", optional = true }
webrtc-sys = { version = "=0.3.5", optional = true }
webrtc-sys-build = { version = "=0.3.5", optional = true }
cpal = "0.15.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_bytes = { workspace = true }
gloo-timers = "0.3"
