[package]
name = "dcl"
version = "0.1.0"
edition = "2021"

[lib]

[features]
default = []
inspect = ["fastwebsockets", "hyper", "uuid"]

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
futures-lite = { workspace = true }
isahc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

deno_core = "0.307"
deno_console = "0.168"
deno_fetch = "0.192"
deno_net = "0.160"
deno_url = "0.168"
deno_webidl = "0.168"
deno_web = "0.199"
deno_websocket = "0.173"

num-derive = "0.3"
num = "0.4"
num-traits = "0.2"
http = "0.2.9"
bytes = "1.4.0"
ethers-providers = { version = "2", features = ["ws","rustls"] }

# inspector requirements
fastwebsockets = { version = "0.4.4", optional = true, features = ["upgrade"] }
hyper = { version = "0.14.26", features = ["runtime", "http1", "server"], optional = true }
uuid = { workspace = true, optional = true }
