[package]
name = "dcl"
version = "0.1.0"
edition = "2021"

[lib]

[features]
default = []
deno = ["dep:deno_core"]
wasm = []

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
wallet = { workspace = true }
system_bridge = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
futures-lite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
http = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
multihash-codetable = { workspace = true }

num-derive = "0.4.2"
num = "0.4"
bytes = "1.4.0"
ethers-providers = { version = "2", features = ["ws","openssl"] }
anyhow = { workspace = true }
deno_core = { version = "0.307", optional = true }
