[package]
name = "dcl"
version = "0.1.0"
edition = "2021"

[lib]

[features]
span_scene_loop = []

[dependencies]
common = { workspace = true }
dcl_component = { workspace = true }
ipfs = { workspace = true }
system_bridge = { workspace = true }

bevy = { workspace = true }
tokio = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
http = { workspace = true }
strum = { workspace = true }

num-derive = "0.4.2"
num = "0.4"
ethers-providers = { version = "2", features = ["ws","openssl"] }
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
deno_core = { version = "0.307" }
